--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -767,6 +767,9 @@ Resources:
           #!/bin/bash -e
           cfn-init -v --stack ${AWS::StackId} --resource PSMPMachine --configsets install_all --region ${AWS::Region}
           cfn-signal -e $? --stack ${AWS::StackId} --resource PSMPMachine --region ${AWS::Region}
+          sudo hostnamectl set-hostname ${ComponentHostname}.localdomain
+          sudo sed -i 's/localhost/${ComponentHostname}/g' /etc/hosts
+          sudo reboot
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
     Metadata:
@@ -849,10 +852,6 @@ Resources:
                   - VaultIpAddress: !Sub '${VaultPrivateIP},${DRPrivateIP}'
             02-PostInstall:
               command: sudo rm -rf /opt/CD-Image/
-            03-SetHostname:
-              command: !Sub >- 
-                sudo hostnamectl set-hostname --static ${ComponentHostname} && sudo reboot
-              waitAfterCompletion: forever
             99-SignalCompletion:
               command: !Sub >-
                 cfn-signal -e $? --stack ${AWS::StackId} --resource PSMPMachine --region ${AWS::Region}
