--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -169,6 +169,17 @@ Resources:
     DependsOn:
       - LambdaDeployRole
     Condition: PSMPCustomImageEmpty
+  PTAAmi:
+    Type: Custom::FindAMI
+    Properties:
+      ServiceToken: !GetAtt GetLatestAMILambda.Arn
+      Version: "13.0"
+      Component: "PTA"
+      OS: "RHEL-8"
+      OwnerAccountId: !Ref CyberarkAccountId
+    DependsOn:
+      - LambdaDeployRole
+    Condition: PTACustomImageEmpty
   StoreMasterPassword:
     Type: 'AWS::CloudFormation::CustomResource'
     Version: '1.0'
@@ -1356,6 +1367,207 @@ Resources:
     DeletionPolicy: Retain
     DependsOn:
       - PSMMachine
+  PTAMachine:
+    Type: 'AWS::EC2::Instance'
+    Properties:
+      Tags:
+        - Key: Name
+          Value: !Ref PTAInstanceName
+      SecurityGroupIds: !Ref PTAInstanceSecurityGroups
+      SubnetId: !Ref PTAInstanceSubnetId
+      ImageId: 
+        Fn::If:
+          - CustomImageEmpty
+          - !Ref PTAAmi
+          - !Ref PTACustomAmi
+      InstanceType: !Ref PTAInstanceType
+      UserData: !Base64
+        'Fn::Sub': |
+          #!/bin/bash -e
+          cfn-init -v --stack ${AWS::StackId} --resource PTAMachine --configsets install_all --region ${AWS::Region}
+          cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
+      KeyName: !Ref KeyName
+      IamInstanceProfile: !Ref ComponentInstanceProfile
+    Metadata:
+      'AWS::CloudFormation::Init':
+        configSets:
+          install_all:
+            - install_logs
+            - install_pta
+        install_logs:
+          files:
+            /opt/aws/amazon-cloudwatch-agent/bin/config.json:
+              content: !Sub |
+                {
+                  "agent": {
+                    "metrics_collection_interval": 10,
+                    "logfile": "/opt/aws/amazon-cloudwatch-agent/logs/amazon-cloudwatch-agent.log",
+                    "run_as_user": "root"
+                  },
+                  "logs": {
+                    "logs_collected": {
+                      "files": {
+                        "collect_list": [
+                          {
+                            "file_path": "/var/log/cloud-init.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PTAMachine/cloud-init",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/var/log/cloud-init-output.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PTAMachine/cloud-init-output",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/var/log/cfn-init.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PTAMachine/cfn-init",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/opt/tomcat/logs/ptaAutomaticConfiguration.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PTAMachine/ptaAutomaticConfiguration",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                                                    {
+                            "file_path": "/opt/tomcat/logs/diamond.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PTAMachine/diamond",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          }
+                        ]
+                      }
+                    }
+                  }
+                }
+              mode: '000444'
+              owner: root
+              group: root
+          commands:
+            01_install_cloudwatch_agent:
+              command: sudo rpm -U https://s3.amazonaws.com/amazoncloudwatch-agent/redhat/amd64/latest/amazon-cloudwatch-agent.rpm
+            02_start_cloudwatch_agent:
+              command: sudo /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/bin/config.json -s
+        install_pta:
+          commands:
+            01-executeptaconfigurationscript: 
+              command: !Sub >-
+                sudo /tmp/register-arguments.sh "${VaultPrivateIP}" "${VaultAdminUser}" "${StoreAdminPassword.SsmId}" ${AWS::Region} "${PVWADNSRecord}" "${DRPrivateIP}"
+            99-SignalCompletion:
+              command: !Sub >-
+                cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
+    CreationPolicy:
+      ResourceSignal:
+        Timeout: PT10M
+    DeletionPolicy: Retain
+    DependsOn:
+      - PVWAMachine
+  VaultDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: 
+      - !Join
+        - ''
+        - - !Ref VaultHostname
+          - '.pas.local'
+      ResourceRecords:
+      - !GetAtt VaultMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: VaultMachine
+  VaultDRDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: 
+      - !Join
+        - ''
+        - - !Ref VaultHostname
+          - '-dr.pas.local'
+      ResourceRecords:
+      - !GetAtt VaultDRMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: VaultDRMachine
+  PVWADNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: 
+      - !Join
+        - ''
+        - - !Ref PVWAHostname
+          - '.pas.local'
+      ResourceRecords:
+      - !GetAtt PVWAMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: PVWAMachine
+  CPMDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: 
+      - !Join
+        - ''
+        - - !Ref CPMHostname
+          - '.pas.local'
+      ResourceRecords:
+      - !GetAtt CPMMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: CPMMachine
+  PSMDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: 
+      - !Join
+        - ''
+        - - !Ref PSMHostname
+          - '.pas.local'
+      ResourceRecords:
+      - !GetAtt PSMMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: PSMMachine
+  PSMPDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: 
+      - !Join
+        - ''
+        - - !Ref PSMPHostname
+          - '.pas.local'
+      ResourceRecords:
+      - !GetAtt PSMPMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: PSMPMachine
+  PTADNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: 
+      - !Join
+        - ''
+        - - !Ref PTAHostname
+          - '.pas.local'
+      ResourceRecords:
+      - !GetAtt PTAMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: PTAMachine
 Parameters:
   EULA:
     Type: String
@@ -1380,6 +1592,9 @@ Parameters:
     Type: 'AWS::EC2::KeyPair::KeyName'
     Description: Select an existing Key Pair from your AWS account.
     ConstraintDescription: Can contain only ASCII characters.
+  PASHostedZoneId:
+    Type: 'AWS::Route53::HostedZone::Id'
+    Description: Provide the ID for the Hosted Zone created during the network deployment template.
   VaultFilesBucket:
     Type: String
     Description: Enter the name of the S3 bucket containing the license and recovery public key.
@@ -1607,6 +1822,36 @@ Parameters:
   PSMPInstanceSubnetId:
     Type: 'AWS::EC2::Subnet::Id'
     Description: Select the Subnet Id where the PSMP instance will reside.
+  PTACustomAmi:
+    Type: String
+    Description: Enter the PTA Image ID, if you wish to use a custom PTA image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
+  PTAInstanceName:
+    Type: String
+    Description: Enter a name for the PTA instance.
+    Default: CyberArk PTA
+  PTAHostname:
+    Type: String
+    Description: Enter the hostname for PTA server.
+    AllowedPattern: ^((?!-)(?=.*[a-zA-Z])[A-Za-z0-9-]{3,15}(?<!-))$
+    ConstraintDescription: Parameter must only contain uppercase and lowercase letters (at least one letter), hyphens and numbers. Hostname can't start or end with hyphen.
+    MaxLength: 15
+    MinLength: 3
+    Default: ptaserver
+  PTAInstanceType:
+    Type: String
+    Description: Select the instance type of the PTA instance.
+    AllowedValues:
+      - m5.2xlarge
+      - m5.4xlarge
+    Default: m5.2xlarge
+  PTAInstanceSecurityGroups:
+    Type: 'List<AWS::EC2::SecurityGroup::Id>'
+    Description: Assign Security Groups to the PTA instance.
+  PTAInstanceSubnetId:
+    Type: 'AWS::EC2::Subnet::Id'
+    Description: Select the Subnet Id where the PTA instance will reside.
 Rules:
   PasswordConfirmation:
     Assertions:
@@ -1642,6 +1887,7 @@ Metadata:
           - WinVersion
           - CyberarkAccountId
           - KeyName
+          - PASHostedZoneId
           - VaultFilesBucket
           - LicenseFile
           - RecoveryPublicKey
@@ -1699,6 +1945,15 @@ Metadata:
           - PSMPInstanceType
           - PSMPInstanceSecurityGroups
           - PSMPInstanceSubnetId
+      - Label:
+          default: PTA configuration
+        Parameters:
+          - PTACustomAmi
+          - PTAInstanceName
+          - PTAHostname
+          - PTAInstanceType
+          - PTAInstanceSecurityGroups
+          - PTAInstanceSubnetId
     ParameterLabels:
       EULA:
         default: License Agreement
@@ -1708,6 +1963,8 @@ Metadata:
         default: CyberArk Account ID
       KeyName:
         default: Key Pair
+      PASHostedZoneId:
+        default: PAS Hosted Zone Id
       VaultFilesBucket:
         default: S3 Bucket
       LicenseFile:
@@ -1792,6 +2049,18 @@ Metadata:
         default: PSMP Instance Security Groups
       PSMPInstanceSubnetId:
         default: PSMP Instance Subnet Id
+      PTACustomAmi:
+        default: Custom PTA Image ID (Optional)
+      PTAInstanceName:
+        default: PTA Instance Name
+      PTAHostname:
+        default: PTA Hostname
+      PTAInstanceType:
+        default: PTA Instance Type
+      PTAInstanceSecurityGroups:
+        default: PTA Instance Security Groups
+      PTAInstanceSubnetId:
+        default: PTA Instance Subnet Id
 Conditions:
   SecretEmpty: !Equals
     - ''
@@ -1811,6 +2080,9 @@ Conditions:
   PSMPCustomImageEmpty: !Equals
     - ''
     - !Ref PSMPCustomAmi
+  PTACustomImageEmpty: !Equals
+    - ''
+    - !Ref PTACustomAmi
 Outputs:
   CloudWatchLogGroupName:
     Description: The name of the CloudWatch log group
