--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1460,7 +1460,7 @@ Resources:
           commands:
             01-executeptaconfigurationscript: 
               command: !Sub >-
-                sudo /tmp/register-arguments.sh "${VaultPrivateIP}" "${VaultAdminUser}" "${StoreAdminPassword.SsmId}" ${AWS::Region} "${PVWADNSRecord}" "${DRPrivateIP}"
+                sudo /tmp/register.sh aws "${VaultPrivateIP}" "${PVWADNSRecord}" "${VaultAdminUser}" "${StoreAdminPassword.SsmId}" ${AWS::Region} "${DRPrivateIP}"
             99-SignalCompletion:
               command: !Sub >-
                 cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
