--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -969,8 +969,7 @@ Resources:
           commands:
             01-executeptaconfigurationscript: 
               command: !Sub >-
-                sudo /tmp/register-arguments.sh "${VaultPrivateIP}" "${VaultAdminUser}" "${StoreAdminPassword.SsmId}" ${AWS::Region} "${PVWAPrivateDNS}" "${DRPrivateIP}"
-            99-SignalCompletion:
+                sudo /tmp/register.sh aws "${VaultPrivateIP}" "${PVWADNSRecord}" "${VaultAdminUser}" "${StoreAdminPassword.SsmId}" ${AWS::Region} "${DRPrivateIP}"
               command: !Sub >-
                 cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
     Condition: CreatePTACondition
